66_appgw_for_containers/ns-deploy-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: ns-app
spec:
  selector:
    app: deploy-app
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app
  namespace: ns-app
  labels:
    app: deploy-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-app
  template:
    metadata:
      labels:
        app: deploy-app
    spec:
      containers:
      - name: aspnetapp
        image: mcr.microsoft.com/dotnet/samples:aspnetapp
        ports:
        - containerPort: 80
