66_appgw_for_containers/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-app
  namespace: ns-app
spec:
  parentRefs:
  - kind: Gateway
    name: gateway-app
    namespace: ns-gateway
  rules:
  - backendRefs:
    - name: svc-app
      port: 80
